--- a/HISTORY.txt
+++ b/HISTORY.txt
@@ -1,3 +1,13 @@
+????-??-??    mlpack 1.0.9
+
+  * GMM initialization is now safer and provides a working GMM when constructed
+    with only the dimensionality and number of Gaussians (#314).
+
+  * Check for division by 0 in Forward-Backward Algorithm in HMMs (#314).
+
+  * Fix MaxVarianceNewCluster (used when re-initializing clusters for k-means)
+    (#314).
+
 2014-01-06    mlpack 1.0.8
 
   * Memory leak in NeighborSearch index-mapping code fixed (#310).
