--- a/HISTORY.txt
+++ b/HISTORY.txt
@@ -14,6 +14,9 @@
 
   * Fix for LRSDP optimizer so that it compiles and can be used (#325).
 
+  * CF (collaborative filtering) now expects users and items to be zero-indexed,
+    not one-indexed (#324).
+
 2014-01-06    mlpack 1.0.8
 
   * Memory leak in NeighborSearch index-mapping code fixed (#310).
