--- a/HISTORY.txt
+++ b/HISTORY.txt
@@ -27,6 +27,8 @@
   * Refactor LRSDP into LRSDP class and standalone function to be optimized
     (#318).
 
+  * Fix for centering in kernel PCA (#355).
+
 2014-01-06    mlpack 1.0.8
 
   * Memory leak in NeighborSearch index-mapping code fixed (#310).
